<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProyectoPrivado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="770dp"
        android:background="#A4363030"
        android:gravity="center"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:padding="24dp"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/marcobotonsolido">
            <TextView
                android:layout_marginHorizontal="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15dp"
                android:text="@string/privado"
                android:fontFamily="sans-serif-condensed"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login4"
                app:passwordToggleEnabled="true"
                android:transitionName="password_tran"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edittext_privado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_aceptarpassword"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/descargar2"
                android:background="#419FBB"
                android:textColor="#ffffff"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>