<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuienesSomos"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/app_name"
                    android:textSize="36sp"
                     />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="26dp"
                    android:fontFamily="casual"
                    android:text="@string/app_claim"
                    android:textSize="18sp"
                     />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:srcCompat="@drawable/mapas_y_ubicacion" />

            </LinearLayout>

        </LinearLayout>

        <com.ibercivis.mapp.clases.JustifyTextView
            android:layout_margin="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quienes"/>

            <ImageView
                android:layout_marginTop="-24dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/servzgzactiva"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/logo_ibercivis"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/mapeado_colaborativo_logo4_color"
                android:layout_marginBottom="12dp"
                />

        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>

